2021-03-26  Robby Stephenson  <robby@periapsis.org>

	* Added TheTVDB data source (Bug 428430).

2021-03-18  Robby Stephenson  <robby@periapsis.org>

	* Added TV series to TMDb data source (Bug 357128).

2021-03-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.

2021-03-07  Robby Stephenson  <robby@periapsis.org>

	* Updated Douban data source.
	* Fixed crashing bug on Windows (Bug 422468).

2021-02-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.5.

2021-02-15  Robby Stephenson  <robby@periapsis.org>

	* Improved MultiFetcher to chain data source searches in order.

2021-02-07  Robby Stephenson  <robby@periapsis.org>

	* Added UPCItemDB.com data source.
	* Added flag for conditional bibtex importing with btparse.

2020-12-27  Robby Stephenson  <robby@periapsis.org>

	* Added additional report with QtCharts.

2020-12-25  Robby Stephenson  <robby@periapsis.org>

	* Improved template refresh on palette or color change.

2020-12-13  Robby Stephenson  <robby@periapsis.org>

	* Switched to use QWebEngine over KHTML by default, when available.

2020-12-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed audio metadata import from directories (Bug 429803).

2020-12-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed import failure bug in reading mp3 artist (Bug 429803).

2020-11-25  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.4.

2020-11-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed text in group view to use correct color (Bug 429475).
	* Added data source for TVmaze.com.
	* Added barcode searching to MusicBrainz data source (Bug 429483).

2020-11-01  Robby Stephenson  <robby@periapsis.org>

	* Added barcode searching to Discogs data source.

2020-10-25  Robby Stephenson  <robby@periapsis.org>

	* Added sorting in the group view, via context menu.

2020-10-11  Robby Stephenson  <robby@periapsis.org>

	* Improve "Filter by Group" expression to account for tables (Bug 427145).