@@ -1,3 +1,7 @@
+2021-04-04  Robby Stephenson  <robby@periapsis.org>
+
+	* Added Year Distribution chart report.
+
 2021-03-26  Robby Stephenson  <robby@periapsis.org>
 
 	* Added TheTVDB data source (Bug 428430).
